tests/paczka2/big_fuzzy/75237818.err
Error in line 11: 89K8C0UJ2 A384 89,0
Error in line 14: 3zrUu6GqVI S610 99,8
Error in line 15: TjIYw9r S610 97,0
Error in line 19: S610 A384 28,3
Error in line 8: z7zg A760 14,1
Error in line 17: 3zrUu6GqVI A862 34,9
Error in line 20: S610 A862 93,5
Error in line 40: S610 A384 59,6
Error in line 57: 3zrUu6GqVI A76; 32,6
Error in line 18: TjIYw9r A384 74,3
Error in line 61: 3zrUu6GqVI A760 157,1
Error in line 73: 3zrUu6GqVI A384 2,1
Error in line 59: S610 A862 57,9
Error in line 78: z7zg A760 5,7
Error in line 83: z7zg S610 87,19
Error in line 90: 3zrUu6GqVI A760 37,8
Error in line 81: S610 S610 42,5
Error in line 86: z7zg A384 53,3
Error in line 102: Jt8 A862 60,7
Error in line 104: Jt8 A760 25,4
Error in line 106: z7zg A384 38,7
Error in line 105: Jt8 A384 51,4
Error in line 111: TjIYw9r A760 21,1
Error in line 114: TjIYw9r S610 19,2
Error in line 120: 89K8C0UJ2 A862 30,2
Error in line 121: 89K8C0UJ2 S610 50,8
Error in line 136: TjIYw9r A862 6,5
Error in line 140: GCrTjM A760 36,8
Error in line 146: GCrTjM A862 32,9
Error in line 155: GCrTjM A760 73,4
Error in line 158: S610 A760 121,5
Error in line 166: Jt8 A862 44,7
Error in line 174: Jt8 S610 85,0
Error in line 175: TjIYw9r A384 21,6
Error in line 183: Jt8 Ai84 2,0
Error in line 179: Jt8 A760 35,8
Error in line 184: Jt8 A384 4,5
Error in line 186: Jt8 A862 71,2
Error in line 190: TjIYw9r A760 90,8
Error in line 187: Jt8 S610 56,8
Error in line 198: Jt8 A760 97,4
Error in line 197: TjIYw9r A862 31,8
Error in line 193: S610 A760 334,2
Error in line 201: S610 S610 90,0
Error in line 202: z7zg S610 96,5
Error in line 210: TjIYw9r A384 94,5
Error in line 211: z7zg A862 16,1
Error in line 214: TjIYw9r S610 95,1
Error in line 191: GCrTjM A760 43,8
Error in line 219: 89K8C0UJ2 A862 91,1
Error in line 217: S610 A862 294,4
Error in line 234: TjIYw9r S610 86,1
Error in line 244: TjIYw9r A384 34,96
Error in line 230: 3zrUu6GqVI A760 40,6
